deploy/openshift/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: uc-course-planner
  labels:
    app: uc-course-planner
