deploy/openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uc-course-planner
  namespace: uc-course-planner
  labels:
    app: uc-course-planner
spec:
  selector:
    app: uc-course-planner
  ports:
    - name: ui
      port: 8501
      targetPort: 8501
      protocol: TCP
